client/src/styles/global.scss
// other CSS libraries:
@import "~@trussworks/react-uswds/lib/index.css";
@import "../../node_modules/mapbox-gl/dist/mapbox-gl.css";

/*
According to the fundamental usage of USWDS:
https://designsystem.digital.gov/documentation/fundamentals/

There are 3 things that should be included in this file:
*/

// 1. Include or point to a USWDS settings file:
@import "./uswds-settings.scss";

// 2. Point to the USWDS source code:
@import "../../node_modules/uswds";

// 3. Include or point to your project's custom Sass
/* 
  Instead of having a separate file for these styles, all styles are being placed here.
  - Global styles
  - Layout styles
    -- Header styles
    -- Main content styles
    -- Footer styles
  - Component styles
    -- Alert styles
    -- Map styles
    -- Timeline/process list styles
    -- About styles
*/




/***************** GLOBAL STYLES **************************************************************/

$primary-color: #112f4e;
$j40-blue-background-color: #EFF6FB;

// The j40-element mixin is used to create any font element. E.g. <h1>, <p> tags, etc.
// Arguments to the mixins must be tokens from USWDS
@mixin j40-element($font-size, $line-height, $font-weight, $margin-top, $margin-bottom: 0) {
  @include typeset('sans', $font-size, $line-height); 
  @include u-text($font-weight);  
  @include u-margin-top($margin-top);
  @include u-margin-bottom($margin-bottom);
}

@mixin j40-mb($space-token) {
  @include u-margin-bottom($space-token);
};

h1 {
  @include j40-element('3xl', 2, 'bold', 5 );
}

h2 {
  @include j40-element('xl', 2, 'bold', 4 );
}

h3 {
  @include j40-element('lg', 2, 'bold', 4 );
}

h4 {
  @include j40-element('sm', 1, 'bold', 3 );
}

h5 {
  @include j40-element('sm', 4, 'bold', 0 );
}

h6 {
  @include j40-element('3xs', 1, 'normal', 0);
}

p {
  @include j40-element('sm', 4, 'normal', 2.5);
}

p.secondary {
  @include j40-element('3xs', 4, 'normal', .5);
}

// 40 pixel margin-bottom
.j40-mb-5 {
  @include j40-mb(5)
}

// 24 pixel margin-bottom
.j40-mb-3 {
  @include j40-mb(3)
}




/***************** LAYOUT STYLES **************************************************************
This section will outline styles for components that are on each page. These 
components include:

- header styles
- main content styles
- footer styles

******************************
*      HEADER STYLES
****************************** 
*/ 
.j40-header,
.j40-primary-nav,
.j40-header > li > a {
  color: $primary-color !important;
  z-index: 5;

  .usa-nav-container {
    max-width: 76rem;
  }

  span {
    // make sure the open close chevron is colored correctly
    color: $primary-color;
  }

  // this is the title
  @include at-media("desktop") {
    .j40-title {
      font-size: 0.9em;
      padding-bottom: 0; // allows vertical centering on logo and text
      font-weight: normal;
    }

    .usa-navbar {
      width: 100%;
    }

    // this actual site logo
    .sitelogo {
      float: left; // allows vertical centering on logo and text
      margin-right: 0.5rem; // space between logo and text
      width: 4rem;
      padding: 0.5rem; // this will change the size of the logo too
    }

    // nav menu item font
    .usa-nav__primary {
      .usa-nav__primary-item {
        a {
          margin-bottom: 0.5em; // how far menu is from bottom edge of nav
          font-weight: 600;
        }
      }
    }

    // this is forcing the whole toolbar much taller
    .usa-logo {
      margin-top: 1.2rem;
      margin-bottom: 1.2rem;
    }
  }

  @include at-media("mobile") {
    .usa-logo__text {
      padding-top: 3px; // allows vertical centering on logo and text
      padding-bottom: 0; // allows vertical centering on logo and text
      font-weight: normal;
    }

    .usa-navbar {
      width: 100%;
    }

    .j40-sitelogo {
      float: left; // allows vertical centering on logo and text
      margin-right: 0.5em; // space between logo and text
      width: 3em;
      padding: 0.4em; // this will change the size of the logo too
    }
  }
}


/* 
******************************
*      MAIN CONTENT STYLES
****************************** 
*/

/* this is used by J40MainGridContainer to show a blue background */
.j40-main-grid-blue-bk {
  background-color: $j40-blue-background-color;

  // This style is to remove the margin collapse occuring
  border-top: 1px solid $j40-blue-background-color;
}

#main-content {
  border-top: 0;
  min-height: 60vh;
}


/* 
******************************
*      FOOTER STYLES
****************************** 
*/ 
.j40-footer {
  .j40-footer-logo {
    font-weight: bold;
  }

  .j40-footer-address {
    .usa-footer__contact-info {
      font-weight: normal;
      text-align: left;
      display: inline-block;
      line-height: 1.5;
    }
  }
}




/***************** COMPONENT STYLES **************************************************************
This section will outline styles that are component specific

- alert
- map
- timeline
- about

/* 
******************************
*      ALERT STYLES
****************************** 
*/

.j40-sitealert {
  p {
    margin: 0;
  }

  min-height: 2.5em;
  margin: 0;

  .j40-sitealert-title {
    font-weight: bold;
  }

  .usa-alert {
    margin: 0;
    padding-bottom: 0;
    padding-top: 0;
  }

  .usa-alert__body {
    padding-top: 0;
    padding-bottom: 0;
    margin-bottom: 0;
  }

  .usa-alert__text {
    padding-top: 0;
    padding-bottom: 0;
    margin-bottom: 0;
  }
}


/* 
******************************
*      MAP STYLES
****************************** 
*/

// Maplibre overrides
// Note that these need to be here to properly override defaults

.mapboxgl-popup-close-button {
  font-size: 3em;
  margin-right: 12px;
  margin-top: 15px;
}

.mapboxgl-popup-content {
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5) !important;
  border-radius: 8px !important;
  pointer-events: all !important;
  width: auto;
}

// Because we're using react-map-gl, you need to use
// the mapboxgl- class name variables.
// Maplibre has its own classnames with a maplibre prefix,
// but it after 1.14.0 it optionally still allows for the mapbox-gl prefix

// Below properties override mb defaults
.mapboxgl-ctrl-group:not(:empty) {
  box-shadow: none;
}

@media (-ms-high-contrast: active) {
  .mapboxgl-ctrl-group:not(:empty) {
    box-shadow: none;
  }
}

.mapboxgl-ctrl-group {
  border-radius: 0;
}

.mapboxgl-ctrl {
  button + button {
    border-top: 1px;
  }

  button {
    border-radius: 0;
    height: 1.66em;
    width: 1.66em;
    box-sizing: border-box;
    background-color: #ffffff;
    border-width: 2px;
    border-color: #000000;
    border-style: solid;
    font-size: 1.5em;

    // It seems necessary to set an explicit size for one of the dimensions
    // in order for this icon to be rendered correctly by gatsby build
    // see more here: https://thatemil.com/blog/2014/04/06/intrinsic-sizing-of-svg-in-responsive-web-design/
    .mapboxgl-ctrl-icon {
      height: 1em;
      pointer-events: none; /* this keeps the icons from "eating" the click events instead of the button getting them */
    }
  }

  button.mapboxgl-ctrl-zoom-in {
    .mapboxgl-ctrl-icon {
      background-image: url("../../node_modules/uswds/dist/img/usa-icons/add.svg");
    }
  }

  button.mapboxgl-ctrl-zoom-out {
    .mapboxgl-ctrl-icon {
      background-image: url("../../node_modules/uswds/dist/img/usa-icons/remove.svg");
    }
  }

  button.mapboxgl-ctrl-zoom-to-48 {
    .mapboxgl-ctrl-icon {
      background-image: url("../images/mapbtn-48.svg");
    }
  }

  button.mapboxgl-ctrl-zoom-to-ak {
    .mapboxgl-ctrl-icon {
      background-image: url("../images/mapbtn-AK.svg");
    }
  }

  button.mapboxgl-ctrl-zoom-to-hi {
    .mapboxgl-ctrl-icon {
      background-image: url("../images/mapbtn-HI.svg");
    }
  }

  button.mapboxgl-ctrl-zoom-to-pr {
    .mapboxgl-ctrl-icon {
      background-image: url("../images/mapbtn-PR.svg");
    }
  }
}


/* 
***************************************
*      TIMELINE / PROCESS LIST STYLES
*************************************** 
*/ 

/* the > is for child only syntax in css. This is required so that lists that are nested under the
      list are not affected (e.g. <ul><li><p><ul><li>not styled</li></ul></p></li><ul>*/
.j40-process-list-wrapper > {
  $j40-steps-list-color: #002D3F;

  ul {
    margin-top: 3rem;
    margin-bottom: 1rem;
    padding-inline-start: 0;

    > li {
      list-style-type: none;
      position: relative;
      margin-left: 2.5rem;
      /* do the lines */
      border-left: .2rem solid $j40-steps-list-color;
      padding-left: 1.88rem;
      /* removes gap between line and circle */
      margin-top: -1rem;
      padding-bottom: 2rem;
    }

    > li:before {
      content: " ";
      border: 1rem solid $j40-steps-list-color;
      border-radius: 100rem;
      height: 0; /* it's all controlled by the border */
      width: 0;
      margin-top: -0.5rem;
      margin-left: -3rem;
      position: absolute;
    }

    > li:last-child {
      /* no line on last item */
      border-left: .2rem solid transparent;
      margin-top: -1.9rem;
    }
  }
}

/* The math equation on the methodology page.. which is a royal pain */
.j40-math-division-container {
  > .j40-math-eq-left-side {
    text-align: right;
    justify-content: center;
    align-items: center;
    padding: 0.5rem;

    > .j40-math-eq-numerator {
      border-bottom: solid 3px black;
      text-align: center;
      width: 90%;
    }

    > .j40-math-eq-denominator {
      text-align: center;
      width: 90%;
    }
  }

  > .j40-math-eq-middle {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    padding: 0.25rem;
  }

  > .j40-math-eq-right-side {
    display: inline-flex;
    align-items: center;
    padding: 0.25rem;
  }
}

ul.j40-process-nested-list {
  margin-bottom: 2rem;
  > li {
    list-style-type: disc; /* without this, we get hollow circles */
  }
}

/* these are currently used in the list, but it seems like they should be globally consistent with the rest of the site */
.j40-item-list-title {
  margin-block-end: auto;
}

.j40-item-list-subtitle {
  margin-block-start: auto;
  margin-block-end: auto;
  font-style: italic;
}


/* 
******************************
*      ABOUT CARD STYLES
****************************** 
*/

/* about card - based on datasetCard... need to combine */
.j40-aboutcard-container {

  .j40-aboutcard-lg-card {
    margin: 1.2rem 0 3rem 0;

    .j40-aboutpage-image-container {
      width: 10.5rem;
      padding: 1.24rem 1.24rem 0 .24rem;
    }

    .j40-aboutcard-image {
      flex: 1 0 10%;
      align-self: flex-start;
    }

    .j40-aboutcard-link {
      font-weight: bold;
    }
  }

  .j40-aboutcard-sm-card {
    margin: 1.2rem 0 3rem 0;

    .j40-aboutpage-image-container {
      padding: 1.24rem 1.24rem 0 .24rem;
    }

    .j40-aboutcard-image {
      width: 3rem;
    }

    .j40-aboutcard-link {
      font-weight: bold;
    }

    div.j40-aboutcard-sm-link {
      @include u-margin-top(2);
    }
  }
}

